# svd-image-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  download_data.sh  ingest_data.py  ingest_data.sh
