[project]
name = "svd-image-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]
